--- a/designs.html
+++ b/designs.html
@@ -26,6 +26,11 @@
           <img src="/images/driveline_2.png" alt="" />
         </div>
       </div>
+      <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImg" />
+      </div>
+      <script src="script.js"></script>
     </div>
   </body>
 </html>
