--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
           <img src="/images/shot_9.jpg" alt="" />
         </div>
       </div>
+      <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImg" />
+      </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
