--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="section">
         <div class="gallery">
-          <img src="/images/shot_1.jpg" alt="" />
+          <img src="images/shot_1.jpg" alt="" />
           <img src="/images/shot_2.jpg" alt="" />
           <img src="/images/shot_3.jpg" alt="" />
           <img src="/images/shot_4.jpg" alt="" />
