--- a/project.html
+++ b/project.html
@@ -19,9 +19,12 @@
           <a href="designs.html">Designs</a>
           <a href="#">Projects</a>
         </div>
+        <div class="nav-menu">
+          <a href="profile.html">Profile</a>
+        </div>
       </div>
       <div class="section">
-        <p>Empty :(</p>
+        <p></p>
       </div>
     </div>
   </body>
