--- a/designs.html
+++ b/designs.html
@@ -19,6 +19,9 @@
           <a href="#">Designs</a>
           <a href="project.html">Projects</a>
         </div>
+        <div class="nav-menu">
+          <a href="profile.html">Profile</a>
+        </div>
       </div>
       <div class="section">
         <div class="gallery">
