--- a/pages/personal.html
+++ b/pages/personal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
     <div class="header">
@@ -15,17 +15,26 @@
       <div class="nav">
         <h1>Portfolio</h1>
         <div class="nav-menu">
-          <a href="index.html">Captures</a>
+          <a href="#">Captures</a>
           <a href="designs.html">Designs</a>
-          <a href="#">Projects</a>
+          <a href="project.html">Projects</a>
+          <a href="personal.html">Personal apps ;)</a>
         </div>
         <div class="nav-menu">
           <a href="profile.html">Profile</a>
+          <a href="">CV</a>
         </div>
       </div>
       <div class="section">
-        <p></p>
+        <div class="gallery">
+          <a href="">To do List</a>
+        </div>
       </div>
+      <!-- <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImg" />
+      </div> -->
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
