--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body>
-    <div class="header">
-      <p>✉️ shmallari@outlook.com</p>
-      <hr />
-    </div>
-    <div class="row">
-      <div class="nav">
-        <h1>Portfolio</h1>
-        <div class="nav-menu">
-          <a href="#">Captures</a>
-          <a href="designs.html">Designs</a>
-          <a href="project.html">Projects</a>
+  <body class="min-h-screen bg-red-50">
+    <div class="flex flex-col md:flex-row">
+      <div class="nav sticky right-0 top-0 z-10 bg-white flex justify-between p-10 w-full shadow-md md:flex-col md:w-28 md:min-h-screen md:justify-start">
+        <div>  
+          <h1 class="text-2xl font-bold">SM</h1>
+          <p class="text-xs md:hidden">Designer | Programmer</p>
         </div>
-        <div class="nav-menu">
-          <a href="profile.html">Profile</a>
+        <div class="nav-menu hidden md:flex flex-col gap-10 pt-20 group">
+          <a href="#"><i class="fa-solid fa-camera-retro fa-lg hover:scale-150 transition duration-300"></i></a>
+          <a href="designs.html"><i class="fa-solid fa-pen-ruler hover:scale-150 transition duration-300"></i></a>
+          <a href="project.html"><i class="fa-solid fa-code fa-lg"></i></a>
+          <a href="personal.html"><i class="fa-brands fa-app-store fa-lg"></i></a> &nbsp;&nbsp;
+          <a href="profile.html"><i class="fa-solid fa-user fa-lg"></i></a>
+          <a href="">
+            <i class="fa-solid fa-file"></i></a>
         </div>
-      </div>
-      <div class="section">
-        <div class="gallery">
-          <img src="/images/shot_1.jpg" alt="" />
-          <img src="/images/shot_2.jpg" alt="" />
-          <img src="/images/shot_3.jpg" alt="" />
-          <img src="/images/shot_4.jpg" alt="" />
-          <img src="/images/shot_5.jpg" alt="" />
-          <img src="/images/shot_6.jpg" alt="" />
-          <img src="/images/shot_7.jpg" alt="" />
-          <img src="/images/shot_8.jpg" alt="" />
-          <img src="/images/shot_9.jpg" alt="" />
+        <div class="menu-btn md:hidden">
+          <i class="fa-solid fa-bars fa-xl"></i>
         </div>
       </div>
-      <div id="myModal" class="modal">
+      <div class="section z-0">
+        <div class="gallery flex justify-around p-5 flex-wrap gap-4">
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_1.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_2.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_3.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_4.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_5.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_6.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_7.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_8.jpg" alt="" />
+          <img class="w-full md:w-80 shadow-md" src="/images/shot_9.jpg" alt="" />
+        </div>
+      </div>
+      <!-- <div id="myModal" class="modal">
         <span class="close">&times;</span>
         <img class="modal-content" id="modalImg" />
       </div>
-    </div>
-    <script src="script.js"></script>
+    </div> -->
+    <script src="js/script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/c6ecfe901b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
